<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="32dp"
    android:background="@drawable/bg_space"
    tools:context=".ResultActivity">

    <TextView
        android:id="@+id/tv_result_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/level_x_cleared"
        android:textSize="36sp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:layout_marginBottom="48dp"
        android:fontFamily="@font/glow_font"
        android:shadowColor="#00FF00"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="10"/>

    <TextView
        android:id="@+id/tv_moves_stat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/moves_used_42"
        android:textSize="24sp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/tv_time_stat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_taken_30_seconds"
        android:textSize="24sp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:layout_marginBottom="64dp"/>

    <Button
        android:id="@+id/btn_play_again"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_play_again"
        android:textSize="24sp"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/btn_main_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_main_menu"
        android:textSize="24sp" />

</LinearLayout>