<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="32dp"
    android:background="@drawable/bg_space"
    tools:context=".MainMenuActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="40sp"
        android:textColor="@android:color/holo_blue_bright"
        android:textStyle="bold"
        android:layout_marginBottom="64dp"
        android:fontFamily="@font/glow_font"
        android:shadowColor="#FFD700"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="8" />

    <Button
    android:id="@+id/btn_play"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/btn_play"
    android:textSize="24sp"
    android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/btn_how_to_play"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_how_to_play"
        android:textSize="24sp"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/btn_exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_exit"
        android:textSize="24sp" />

</LinearLayout>